--- a/x86_64/.config
+++ b/x86_64/.config
@@ -1,6 +1,6 @@
 # 设置固件大小:
 CONFIG_TARGET_KERNEL_PARTSIZE=20
-CONFIG_TARGET_ROOTFS_PARTSIZE=775
+CONFIG_TARGET_ROOTFS_PARTSIZE=3000
 
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
@@ -29,7 +29,7 @@ CONFIG_PACKAGE_luci-app-accesscontrol=n
 CONFIG_PACKAGE_luci-app-acme=n
 CONFIG_PACKAGE_luci-app-adblock=n
 CONFIG_PACKAGE_luci-app-adbyby-plus=n
-CONFIG_PACKAGE_luci-app-adguardhome=n
+CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-advanced-reboot=n
 CONFIG_PACKAGE_luci-app-advancedsetting=n
 CONFIG_PACKAGE_luci-app-airplay2=n
@@ -90,7 +90,7 @@ CONFIG_PACKAGE_luci-app-minidlna=n
 CONFIG_PACKAGE_luci-app-mjpg-streamer=n
 CONFIG_PACKAGE_luci-app-mtwifi=n
 CONFIG_PACKAGE_luci-app-music-remote-center=n
-CONFIG_PACKAGE_luci-app-mwan3=n
+CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-mwan3helper=n
 CONFIG_PACKAGE_luci-app-n2n_v2=n
 CONFIG_PACKAGE_luci-app-netdata=n
@@ -135,14 +135,14 @@ CONFIG_PACKAGE_luci-app-shadowsocks-libev=n
 CONFIG_PACKAGE_luci-app-shairplay=n
 CONFIG_PACKAGE_luci-app-siitwizard=n
 CONFIG_PACKAGE_luci-app-simple-adblock=n
-CONFIG_PACKAGE_luci-app-smartdns=n
+CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-snmpd=n
 CONFIG_PACKAGE_luci-app-softethervpn=n
 CONFIG_PACKAGE_luci-app-splash=n
 CONFIG_PACKAGE_luci-app-sqm=n
 CONFIG_PACKAGE_luci-app-squid=n
 
-CONFIG_PACKAGE_luci-app-ssr-plus=n
+CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
@@ -157,7 +157,7 @@ CONFIG_PACKAGE_luci-app-syncthing=n
 CONFIG_PACKAGE_luci-app-tinyproxy=n
 CONFIG_PACKAGE_luci-app-transmission=n
 CONFIG_PACKAGE_luci-app-travelmate=n
-CONFIG_PACKAGE_luci-app-ttyd=n
+CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-udpxy=n
 CONFIG_PACKAGE_luci-app-uhttpd=n
 CONFIG_PACKAGE_luci-app-unblockmusic=n
@@ -219,7 +219,7 @@ CONFIG_PACKAGE_iptables-mod-filter=y
 CONFIG_PACKAGE_bind-dig=n
 CONFIG_PACKAGE_wget=y
 CONFIG_PACKAGE_curl=y
-CONFIG_PACKAGE_htop=n
+CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_httping=y
 CONFIG_PACKAGE_tcping=n
 CONFIG_PACKAGE_automount=y
@@ -227,7 +227,7 @@ CONFIG_PACKAGE_autocore=y
 CONFIG_PACKAGE_autosamba=n
 CONFIG_PACKAGE_fdisk=n
 CONFIG_PACKAGE_cfdisk=n
-CONFIG_PACKAGE_nano=n
+CONFIG_PACKAGE_nano=y
 CONFIG_PACKAGE_iptables-mod-fullconenat=y
 # CONFIG_PACKAGE_git=y
 # CONFIG_PACKAGE_git-http=y
@@ -294,4 +294,4 @@ CONFIG_PACKAGE_kmod-ipt-ipopt=y
 CONFIG_PACKAGE_kmod-ipt-raw=y
 
 CONFIG_GRUB_BOOTOPTS="nomodeset"
-CONFIG_KERNEL_BUILD_USER="GaryPang"
+CONFIG_KERNEL_BUILD_USER="morzlee"
