--- a/x86_64/.config
+++ b/x86_64/.config
@@ -303,6 +303,7 @@ CONFIG_PACKAGE_kmod-ikconfig=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-nf-ipvs=y
 CONFIG_PACKAGE_kmod-veth=y
+CONFIG_PACKAGE_kmod-dummy=y
 
 # ksmbd
 CONFIG_PACKAGE_kmod-fs-ksmbd=y
