--- a/k2p/.config
+++ b/k2p/.config
@@ -146,6 +146,7 @@ CONFIG_PACKAGE_luci-app-tinyproxy=n
 CONFIG_PACKAGE_luci-app-transmission=n
 CONFIG_PACKAGE_luci-app-travelmate=n
 CONFIG_PACKAGE_luci-app-ttyd=n
+CONFIG_PACKAGE_luci-app-turboacc=y
 CONFIG_PACKAGE_luci-app-udpxy=n
 CONFIG_PACKAGE_luci-app-uhttpd=n
 CONFIG_PACKAGE_luci-app-unblockmusic=n
