--- a/x86_64/.config
+++ b/x86_64/.config
@@ -77,6 +77,8 @@ CONFIG_PACKAGE_luci-app-filerun=n
 CONFIG_PACKAGE_luci-app-filetransfer=n
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-turboacc=y
+PACKAGE_luci-app-turboacc_INCLUDE_flow-offload=n
+PACKAGE_luci-app-turboacc_INCLUDE_shortcut-fe=y
 CONFIG_PACKAGE_luci-app-frpc=n
 CONFIG_PACKAGE_luci-app-frps=n
 CONFIG_PACKAGE_luci-app-fwknopd=n
