--- a/.github/workflows/merge-upstream.yml
+++ b/.github/workflows/merge-upstream.yml
@@ -33,8 +33,8 @@ jobs:
 
     - name: Set git identity
       run : |
-        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        git config --global user.name "github-actions[bot]"
+        git config --global user.email "fantasylidong@gmail.com"
+        git config --global user.name "fantasylidong"
     - name: Load upstream commits
       run: git pull https://github.com/garypang13/Actions-OpenWrt.git --log --no-commit
 
