--- a/x86_64/.config
+++ b/x86_64/.config
@@ -64,7 +64,7 @@ CONFIG_PACKAGE_luci-app-diskman_INCLUDE_mdadm=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_raid456=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_kmod_md_linear=n
 CONFIG_PACKAGE_luci-app-dnscrypt-proxy=n
-CONFIG_PACKAGE_luci-app-dnsforwarder=y
+CONFIG_PACKAGE_luci-app-dnsforwarder=n
 CONFIG_PACKAGE_luci-app-dockerman=n
 CONFIG_PACKAGE_luci-app-dockerman_INCLUDE_docker_ce=y
 CONFIG_PACKAGE_luci-app-dockerman_INCLUDE_ttyd=y
@@ -166,7 +166,7 @@ CONFIG_PACKAGE_luci-app-transmission=n
 CONFIG_PACKAGE_luci-app-travelmate=n
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-udpxy=n
-CONFIG_PACKAGE_luci-app-uhttpd=y
+CONFIG_PACKAGE_luci-app-uhttpd=n
 CONFIG_PACKAGE_luci-app-unblockmusic=n
 CONFIG_UnblockNeteaseMusic_Go=n
 CONFIG_UnblockNeteaseMusic_NodeJS=y
@@ -208,11 +208,11 @@ CONFIG_PACKAGE_luci-theme-rosy=n
 
 # 其他需要安装的软件包:
 
-CONFIG_PACKAGE_luci-ssl-nginx=n
-CONFIG_NGINX_HTTP_V2=n
-CONFIG_NGINX_DAV=n
+CONFIG_PACKAGE_luci-ssl-nginx=y
+CONFIG_NGINX_HTTP_V2=y
+CONFIG_NGINX_DAV=y
 CONFIG_NGINX_NAXSI=n
-CONFIG_PACKAGE_luci=y # uhttpd服务
+CONFIG_PACKAGE_luci=n # uhttpd服务
 CONFIG_PACKAGE_luci-base=y
 CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_luci-lib-ipkg=y
