--- a/x86_64/.config
+++ b/x86_64/.config
@@ -208,11 +208,11 @@ CONFIG_PACKAGE_luci-theme-rosy=n
 
 # 其他需要安装的软件包:
 
-CONFIG_PACKAGE_luci-ssl-nginx=y
-CONFIG_NGINX_HTTP_V2=y
-CONFIG_NGINX_DAV=y
+CONFIG_PACKAGE_luci-ssl-nginx=n
+CONFIG_NGINX_HTTP_V2=n
+CONFIG_NGINX_DAV=n
 CONFIG_NGINX_NAXSI=n
-CONFIG_PACKAGE_luci=n # uhttpd服务
+CONFIG_PACKAGE_luci=y # uhttpd服务
 CONFIG_PACKAGE_luci-base=y
 CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_luci-lib-ipkg=y
