--- a/.github/workflows/dispatcher-actions.yml
+++ b/.github/workflows/dispatcher-actions.yml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: ["${{matrix.target}}"]
+        target: [x86_64,k2p,redmi_ac2100]
         
     steps:
     - name: Checkout
